configs updated, minor UI improvements and EULA added

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
       <div class="col-sm-2 fill right_panel">
 
         <div class="panel panel-default fill">
-          <h4 class="panel-heading" data-toggle="tooltip">Extensions</h4>
+          <h4 class="panel-heading extensions-heading" data-toggle="tooltip">Extensions</h4>
         
           <ul class="nav nav-tabs pl">
             <li class="active"><a data-toggle="tab" href="#custom">Custom</a></li>
