minor project details update

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Standard Extensions</title>
+  <title>Forge Extensions</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/learn.forge.viewmodels/raw/master/img/favicon.ico">
   <!-- Common packages: jQuery, Bootstrap, jsTree -->
@@ -37,7 +37,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="https://github.com/libvarun/StandardExtensions" target="_blank">
+          <a href="https://github.com/libvarun/forge-extensions" target="_blank">
             <img alt="Autodesk Forge" src="/img/GitHub_Logo.png" height="25">
           </a>
         </li>
