--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,29 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal Edit Config Bucket -->
+  <div class="modal fade" id="editConfigModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Cancel">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Edit Extension Options</h4>
+        </div>
+        <div class="modal-body">
+          <textarea type="text" id="editextensionconfig" class="form-control"></textarea> 
+          
+        </div>
+        <div class="modal-footer">
+          <span><a id="learnmore" target="_blank" href="">Learn more</a></span>
+          <button type="button" class="btn  btn-success" id="saveconfig" data-dismiss="modal" aria-label="Cancel">Apply</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
