--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
   <script src="/extensions/extensionloader.js"></script>
+  <!-- Extension Dependencies -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBV72JOytVAAXlvey3kGB-XCu4S5XUxOs" type="text/javascript"></script>
 </head>
 
 <body>
