Readme Updates and loading issue fixed

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
   <script src="/extensions/extensionloader.js"></script>
   <!-- Extension Dependencies -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBV72JOytVAAXlvey3kGB-XCu4S5XUxOs" type="text/javascript"></script>
+  <!-- XLS related libraries -->
+  <script src="extensions/XLSExtension/contents/libraries/Blob.js"></script> <!-- https://github.com/eligrey/Blob.js -->
+  <script src="extensions/XLSExtension/contents/libraries/FileSaver.min.js"></script> <!-- https://github.com/eligrey/FileSaver.js -->
+  <script src="extensions/XLSExtension/contents/libraries/xlsx.core.min.js"></script> <!-- https://github.com/SheetJS/js-xlsx -->
+  <!-- Notification ballons and clipboard util -->
+  <script src="extensions/XLSExtension/contents/libraries/notify.min.js"></script>
+  <script src="extensions/XLSExtension/contents/libraries/clipboard.min.js"></script>
 </head>
 
 <body>
